more cleanup, getting ready for a release